Added MRTK. Created the version window and have version information running. There is a scale error.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ MRTK/
 MRTK.meta
 Microsoft.MixedReality.Toolkit.*
 
+# TextMesh Pro Package Files
+TextMesh Pro/
+TextMesh Pro.meta
+
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 Lib/*.suo
